--- a/app/src/main/res/layout/fragment_place_to_go.xml
+++ b/app/src/main/res/layout/fragment_place_to_go.xml
@@ -29,7 +29,7 @@
             android:fontFamily="@font/bmjua"
             android:gravity="left"
             android:lineSpacingExtra="-1sp"
-            android:text="[우주댕댕이]과 함께 가고 싶은 곳"
+            android:text="[000] 님의 찜 목록"
             android:textColor="#0C201E"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
