--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#0C201E</color>
     <color name="white">#FFFFFFFF</color>
     <!--색 다시 수정 할것!-->
-    <color name="main_green">#40A196</color>
+    <color name="main_green">#B0DAFF</color>
     <color name="red">#BB2649</color>
     <color name="kakao">#FEE500</color>
     <color name="textForBlack">#0C201E</color>
