HomeFragment recyclerview 및 row 추가 HomeMainAdapter 수정 HomeMainData 수정

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,8 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/bmjua"
-            android:text="펫스페이스"
-            android:textColor="#2D7970"
+            android:text="펫과함께"
+            android:textColor="#B0DAFF"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
