--- a/app/src/main/res/layout/fragment_place_to_go.xml
+++ b/app/src/main/res/layout/fragment_place_to_go.xml
@@ -1,60 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/placetogoLayout"
-    tools:context=".placetogo.PlaceToGoFragment">
+    tools:context=".placetogo.PlaceToGoFragment"
+    android:orientation="vertical">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/edge_below"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="20dp"
+        android:id="@+id/loginTop"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+
+
 
         <TextView
-            android:id="@+id/title_placetogo"
+            android:id="@+id/text_hostname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
+            android:text="000 님의 찜 목록"
             android:fontFamily="@font/bmjua"
-            android:gravity="left"
-            android:lineSpacingExtra="-1sp"
-            android:text="[000] 님의 찜 목록"
-            android:textColor="#0C201E"
-            android:textSize="20dp"
+            android:textSize="20sp"
+            android:textColor="@color/textForBlack"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <FrameLayout
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#D9D9D9" />
+    <LinearLayout
         android:id="@+id/menu_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="60dp">
-        <GridView
-            android:id="@+id/place_gridview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:numColumns="2"
-            tools:listitem="@layout/placetogo_grid_itemlist" />
+        android:orientation="vertical">
 
 
-    </FrameLayout>
 
-</FrameLayout>
+    </LinearLayout>
+
+</LinearLayout>
 
