--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,8 +12,7 @@
         android:paddingHorizontal="20dp"
         android:id="@+id/bannerTop"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
+        android:layout_height="80dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -38,60 +37,38 @@
             app:layout_constraintStart_toEndOf="@+id/text_pet"
             app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_marginHorizontal="20dp"
-        android:background="?attr/selectableItemBackground"
-        android:id="@+id/btn_edittext"
-        android:layout_width="match_parent"
-        android:layout_height="46sp"
-        android:layout_marginTop="18dp"
-        android:foreground="@drawable/edittext_main"
-        android:clickable="true"
-        android:focusable="true"
-        android:paddingHorizontal="20dp">
-
         <ImageView
-            android:id="@+id/img_search"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/searchicon"
+
+            android:background="?attr/selectableItemBackground"
+            android:id="@+id/btn_search"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd ="20dp"
+            android:src="@drawable/searchsvg"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/ticket"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="반려동물과 어디로 여행가세요?"
-            android:textColor="#7F7F7F"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/img_search"
-            app:layout_constraintTop_toTopOf="parent"
-
-            />
 
         <ImageView
-            android:id="@+id/img_filter"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/tune1x"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="?attr/selectableItemBackground"
+            android:id="@+id/ticket"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="5dp"
+            android:src="@drawable/ticket4x"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 
     <androidx.core.widget.NestedScrollView
 
 
-        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_edittext">
