--- a/app/src/main/res/layout/activity_signin_2.xml
+++ b/app/src/main/res/layout/activity_signin_2.xml
@@ -205,7 +205,7 @@
             <androidx.appcompat.widget.AppCompatButton
 
                 android:clickable="true"
-                android:enabled="false"
+                android:enabled="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="50dp"
                 android:id="@+id/btnContinue_after"
@@ -215,7 +215,7 @@
                 android:fontFamily="@font/roboto_medium"
                 android:paddingLeft="20dp"
                 android:paddingRight="43dp"
-                android:text="계속하기"
+                android:text="회원가입"
                 android:textAllCaps="false"
                 android:textColor="#EEF5F5"
                 android:textSize="16dp"
