--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,6 +57,7 @@
             android:paddingHorizontal="20dp">
 
             <TextView
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
@@ -172,6 +173,9 @@
                 android:gravity="center">
 
                 <TextView
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
                     android:id="@+id/btn_newAccount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
