--- a/app/src/main/res/layout/activity_gif.xml
+++ b/app/src/main/res/layout/activity_gif.xml
@@ -23,9 +23,37 @@
         android:layout_marginTop="30dp"
         android:fontFamily="@font/bmjua"
         android:text="환영합니다!"
+        android:textColor="@color/textForBlack"
         android:textAlignment="center"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_gif" />
+
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_marginBottom="100dp"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:foreground="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:id="@+id/btn_Next"
+        android:fontFamily="@font/roboto_medium"
+        android:textSize="16sp"
+        android:textColor="@color/textForBlack"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="48sp"
+        android:backgroundTint="@color/main_green"
+        android:background="@drawable/btn_continue_customfull"
+        android:text="WithPet 시작하기"
+        android:textAllCaps="false"
+
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
