--- a/app/src/main/res/layout/fragment_profile_menu.xml
+++ b/app/src/main/res/layout/fragment_profile_menu.xml
@@ -46,6 +46,7 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <LinearLayout
+        android:background="?attr/selectableItemBackground"
         android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
