ToGo fragment 화면설정 완료

--- a/app/src/main/res/layout/fragment_place_to_go.xml
+++ b/app/src/main/res/layout/fragment_place_to_go.xml
@@ -46,7 +46,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_togoList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible"
+            android:paddingHorizontal="20dp">
 
+        </androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
 
