--- a/app/src/main/res/layout/activity_acc_main.xml
+++ b/app/src/main/res/layout/activity_acc_main.xml
@@ -11,6 +11,8 @@
 
 
     <ScrollView
+        android:nestedScrollingEnabled="false"
+
         android:id="@+id/acc_scrollview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -70,18 +72,13 @@
                  app:layout_constraintTop_toBottomOf="@id/loginTop" />
  -->
             <androidx.viewpager2.widget.ViewPager2
+                android:nestedScrollingEnabled="false"
                 android:scaleType="fitXY"
                 android:id="@+id/viewpager"
                 android:layout_width="match_parent"
                 android:layout_height="200sp" />
 
-            <!--     <ImageView
-                     android:layout_width="match_parent"
-                     android:layout_height="200dp"
-                     android:scaleType="fitXY"
-                     android:src="@drawable/home2"
 
-                     />-->
 
 
             <TextView
