--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,9 +7,9 @@
     android:id="@+id/activity_splash">
 
     <ImageView
-        android:layout_width="483dp"
-        android:layout_height="928dp"
-        android:src="@drawable/splash_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/withpetlogo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
