fix : 검색화면 text변경

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -124,7 +124,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginTop="10dp"
-                        android:text="단독주택"
+                        android:text="전체"
                         android:textColor="@color/textForBlack"
                         android:textSize="14dp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -168,7 +168,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:gravity="center"
-                        android:text="캠핑장"
+                        android:text="카페"
                         android:textColor="@color/textForBlack"
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -210,7 +210,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:gravity="center"
-                        android:text="도심"
+                        android:text="식당"
                         android:textColor="@color/textForBlack"
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -251,7 +251,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="시골"
+                        android:text="공원"
                         android:textColor="@color/textForBlack"
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -294,7 +294,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:gravity="center"
-                        android:text="해변"
+                        android:text="미용"
                         android:textColor="@color/textForBlack"
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
