--- a/app/src/main/res/layout/fragment_home_res_one.xml
+++ b/app/src/main/res/layout/fragment_home_res_one.xml
@@ -50,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="서울"
+            android:text="카페"
             android:textColor="@color/textForBlack"
             android:textSize="16dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="제주"
+            android:text="식당"
             android:textColor="@color/textForBlack"
             android:textSize="16dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +127,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="춘천"
+            android:text="공원"
             android:textColor="@color/textForBlack"
             android:textSize="16dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -177,7 +177,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="속초"
+                android:text="미용"
                 android:textColor="@color/textForBlack"
                 android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -215,7 +215,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="전주"
+                android:text="병원"
                 android:textColor="@color/textForBlack"
                 android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -254,7 +254,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="부산"
+                android:text="숙박"
                 android:textColor="@color/textForBlack"
                 android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="parent"
