--- a/app/src/main/res/layout/fragment_calendar_main.xml
+++ b/app/src/main/res/layout/fragment_calendar_main.xml
@@ -65,5 +65,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:visibility="invisible"
+        android:nestedScrollingEnabled="true"
+        android:layout_marginTop="30dp"
+        android:paddingHorizontal="15dp"
+        android:id="@+id/recyclerview3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
 
 </LinearLayout>
