fix : spinner 정렬 가격정렬 추가 및 평점 정렬 추가

--- a/app/src/main/res/layout/home_main_row.xml
+++ b/app/src/main/res/layout/home_main_row.xml
@@ -29,36 +29,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-
-        <TextView
-            android:id="@+id/text_loc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="종로구, 서울"
-            android:textColor="@color/white"
-            android:textSize="12dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
         <androidx.constraintlayout.widget.ConstraintLayout
-            app:layout_constraintTop_toBottomOf="@+id/text_loc"
+            android:id="@+id/top"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            >
-
+            android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/text_name"
+                android:id="@+id/text_loc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="로우커피스탠드"
+                android:text="종로구, 서울"
                 android:textColor="@color/white"
-                android:textSize="20dp"
-                android:fontFamily="@font/pretendard_semibold"
+                android:textSize="12dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <ImageView
                 android:id="@+id/img_star"
@@ -83,9 +70,55 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+
+
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            app:layout_constraintTop_toBottomOf="@+id/top"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            >
+
+
+            <TextView
+                android:id="@+id/text_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="로우커피스탠드"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                android:fontFamily="@font/pretendard_semibold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <TextView
+                android:gravity="center"
+                android:id="@+id/Price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/pretendard_regular"
+                android:text="10,000원"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 
     <View
