--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -5,7 +5,7 @@
         <item>높은가격순</item>
         <item>낮은가격순</item>
         <item>평점높은순</item>
-        <item>리뷰많은순</item>
+        <item>평점낮은순</item>
     </string-array>
 
 </resources>
